--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Byte Size</title>
+  <title>Little Earl</title>
   <link rel="stylesheet" type="text/css" href="public/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <h1> Little Earl - Make urls with js5 </h1>
     <img src="https://s3.amazonaws.com/codecademy-content/courses/intermediate-javascript-requests/bytesize_logo.svg" class="logo" />
 
   </header>
